--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,9 @@
     "vue-loader": "13.6.0",
     "webpack": "3.10.0",
     "css-loader": "0.28.7",
-    "vue-template-compiler": "2.5.13"
+    "vue-template-compiler": "2.5.13",
+    "style-loader": "0.19.1",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.1"
   }
 }
