--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "stylus": "0.54.5",
     "stylus-loader": "3.0.1",
     "url-loader": "0.6.2",
-    "file-loader": "1.1.6"
+    "file-loader": "1.1.6",
+    "webpack-dev-server": "2.9.7"
   }
 }
