--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url-loader": "0.6.2",
     "file-loader": "1.1.6",
     "webpack-dev-server": "2.9.7",
-    "cross-env": "5.1.3"
+    "cross-env": "5.1.3",
+    "html-webpack-plugin": "2.30.1"
   }
 }
