--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "file-loader": "1.1.6",
     "webpack-dev-server": "2.9.7",
     "cross-env": "5.1.3",
-    "html-webpack-plugin": "2.30.1"
+    "html-webpack-plugin": "2.30.1",
+    "postcss-loader": "2.0.9",
+    "autoprefixer": "7.2.3",
+    "babel-loader": "7.1.2",
+    "babel-core": "6.26.0"
   }
 }
