--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "postcss-loader": "2.0.9",
     "autoprefixer": "7.2.3",
     "babel-loader": "7.1.2",
-    "babel-core": "6.26.0"
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-plugin-transform-vue-jsx": "3.5.0",
+    "babel-plugin-syntax-jsx": "6.18.0",
+    "babel-helper-vue-jsx-merge-props": "2.0.3"
   }
 }
