--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-env": "1.6.1",
     "babel-plugin-transform-vue-jsx": "3.5.0",
     "babel-plugin-syntax-jsx": "6.18.0",
-    "babel-helper-vue-jsx-merge-props": "2.0.3"
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
+    "extract-text-webpack-plugin": "3.0.2"
   }
 }
