--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vue": "2.5.13",
+    "vue": "2.5.13"
+  },
+  "devDependencies": {
     "vue-loader": "13.6.0",
     "webpack": "3.10.0",
     "css-loader": "0.28.7",
@@ -32,6 +34,7 @@
     "babel-plugin-transform-vue-jsx": "3.5.0",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "extract-text-webpack-plugin": "3.0.2"
+    "extract-text-webpack-plugin": "3.0.2",
+    "webpack-merge": "^4.1.2"
   }
 }
